fixed header on mobile

--- a/ckanext/mds_theme/public/custom.css
+++ b/ckanext/mds_theme/public/custom.css
@@ -41,6 +41,14 @@ main {
 }
 
 /* poncho */
+@media (max-width: 420px) {
+  .navbar .container .navbar-header .navbar-brand img {
+    width: 80px;
+  }
+  .main {
+    padding-top: 0px;
+  }
+}
 
 .jumbotron {
   background-image: url('/img/home_bg.png');
